--- a/css/styles.css
+++ b/css/styles.css
@@ -1902,14 +1902,7 @@ body.editor-maximized #modeViewExpress {
   margin-bottom: 12px;
 }
 
-body.editor-maximized .hdr,
-body.editor-maximized .tabs,
-body.editor-maximized #snippetsBar,
-body.editor-maximized #snippetContextMenu,
-body.editor-maximized #expressions,
-body.editor-maximized #expressControls,
-body.editor-maximized #expressMisc,
-body.editor-maximized #bankSelectMenu {
+body.editor-maximized .hide-when-editor-maximized {
   display: none !important;
 }
 /* ================================
@@ -1935,6 +1928,24 @@ body.editor-maximized #expressApplyRow .apply-row {
 
 body.editor-maximized #toast {
   display: block;
+}
+
+#bottomControls {
+  position: sticky;
+  bottom: 0;
+  background: inherit;
+  z-index: 6;
+}
+#modePanel.editor-maximized .modePanel-inner {
+  display: flex;
+  flex-direction: column;
+}
+#modePanel.editor-maximized {
+  overflow: hidden;
+}
+#modePanel.editor-maximized .CodeMirror {
+  flex: 1 1 auto;
+  overflow-y: auto;
 }
 
 
