--- a/css-devEx/raw-downloads/file____C__Users_Ben_AppData_Roaming_Adobe_CEP_extensions_LINK_Holy-Expressor-Repo-2_css_styles.css
+++ b/css-devEx/raw-downloads/file____C__Users_Ben_AppData_Roaming_Adobe_CEP_extensions_LINK_Holy-Expressor-Repo-2_css_styles.css
@@ -2190,11 +2190,11 @@ html.theme-default #codeEditor .cm-editor .cm-gutter {
 #snippetsBar {
   display: flex;
   flex-direction: column;
-  flex: 0 0 auto;         /* 🔒 cannot expand or shrink */
+    flex: 0 0 auto;         /* 🔒 cannot expand or shrink */
   gap: 0;
   background: none;
   padding: 0;
-  margin-top: 8.6px;
+  margin: 0;
   border: var(--outer-borders);
   border-radius: 0px 16px 0px 0px;
 }
