--- a/css/styles.css
+++ b/css/styles.css
@@ -1591,9 +1591,10 @@ textarea {
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  flex: 1;
   gap: 0px;
   z-index: 1;
-  transform: translateY(-4.900000000000003px);
 }
 
 #rewriteSearchWrapper {
@@ -1602,7 +1603,6 @@ textarea {
 
 #rewriteReplaceWrapper {
   padding: 0px;
-  transform: translateY(-38px);
 }
 
 #rewriteSearchWrapper .text-input,
@@ -1642,21 +1642,19 @@ textarea {
 }
 
 .rewrite-label-search {
-  position: relative;
-  margin-right: auto;
-  top: -9.399999999999999px;
-  left: -11.399999999999999px;
+  position: absolute;
+  top: 0;
+  left: 0;
   transform: scale(0.65);
-  gap: 0px;
+  transform-origin: top left;
 }
 
 .rewrite-label-replace {
-  position: relative;
-  margin-left: auto;
-  left: 16.699999999999992px;
-  top: 15.20000000000001px;
+  position: absolute;
+  top: 0;
+  right: 0;
   transform: scale(0.65);
-  gap: 69;
+  transform-origin: top right;
 }
 
 
@@ -1666,22 +1664,21 @@ textarea {
 
 .rewrite-edge-line-bottom,
 .rewrite-edge-line-top {
-  position: relative;
+  position: absolute;
   left: 0;
   right: 0;
   height: 0;
   background: var(--G-color-1-midlight2);
   pointer-events: none;
-  gap: 0px;
   opacity: 0.5;
 }
 
 .rewrite-edge-line-bottom {
-  top: 14.700000000000008px;
+  bottom: 0;
 }
 
 .rewrite-edge-line-top {
-  top: 0px;
+  top: 0;
 }
 
 
@@ -1690,13 +1687,10 @@ textarea {
 
 .rewrite-gradient-down,
 .rewrite-gradient-up {
-  position: relative;
+  position: absolute;
   left: 0;
   right: 0;
-  height: 14px;
   pointer-events: none;
-  gap: 0px;
-  top: 10px;
   opacity: 0.5;
 }
 
@@ -1706,8 +1700,14 @@ textarea {
   background: linear-gradient(180deg, rgba(var(--G-colour-1-RGB), 0.32) 0%, rgba(var(--G-colour-1-RGB), 0) 100%);
 }
 
+#rewriteReplaceWrapper .rewrite-gradient-down {
+  top: auto;
+  bottom: 0;
+}
+
 .rewrite-gradient-up {
-  top: -38px;
+  bottom: 11px;
+  height: 14px;
   background: linear-gradient(180deg, rgba(var(--G-colour-1-RGB), 0) 0%, rgba(var(--G-colour-1-RGB), 0.32) 100%);
 }
 
